# openclaw-host-config

./: .gitignore  IconSource.af  IconSource.af~lock~  README.md  cli.js  generate-icons.sh  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: build.sh  install-requirements.sh  remove-node-modules-from-git.sh
src/: App.tsx  config.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  detection.rs  llmfit.rs  main.rs  models_available.rs  openclaw_config.rs  system.rs
src/components/: Agents.tsx  ApiKeyManager.tsx  GatewayStatus.tsx  LocalLLMs.tsx  ModelManager.tsx  OpenClawConfig.tsx
