[package]
name = "openclaw-config"
version = "0.1.0"
description = "OpenClaw Local Host Configuration Tool"
authors = ["Alex Okita"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
tauri-plugin-shell = "2"
sysinfo = "0.31"
ureq = { version = "2", default-features = false, features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
